--- a/FirstPlugin/pom.xml
+++ b/FirstPlugin/pom.xml
@@ -3,4 +3,29 @@
   <groupId>io.github.Klopurb</groupId>
   <artifactId>FirstPlugin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+</project>          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>1.8</source>
+                  <target>1.8</target>
+              </configuration>
+          </plugin>
+      </plugins>
+   </build>
+   <repositories>
+       <repository>
+         <id>spigot-repo</id>
+         <url>https://hub.spigotmc.org/nexus/content/repositories/public/</url>
+       </repository>
+   </repositories>
+   <dependencies>
+       <dependency>
+           <groupId>org.spigotmc</groupId>
+           <artifactId>spigot-api</artifactId>
+           <version>LATEST</version><!--change this value depending on the version or use LATEST-->
+           <type>jar</type>
+           <scope>provided</scope>
+       </dependency>
+   </dependencies>
 </project>
